# criterion-perf-events

./: Cargo.toml  README.md
.github/workflows/: rust.yml  security_audit.yml
examples/: fibo_bench.rs
src/: lib.rs
